[workspace]
members = [
    "crates/langgraph-core",
    "crates/langgraph-checkpoint",
    "crates/langgraph-agentdb",
    "crates/langgraph-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LangGraph Contributors"]
license = "MIT"
repository = "https://github.com/globalbusinessadvisors/lang-graph-rs"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled", "vtab"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"

# Vector operations
ndarray = "0.15"

# Testing
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
