[package]
name = "langgraph-checkpoint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Checkpointing and persistence layer for LangGraph"

[dependencies]
langgraph-core = { path = "../langgraph-core" }
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
rusqlite = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
chrono.workspace = true

[features]
default = ["memory"]
memory = []
sqlite = ["rusqlite", "ndarray"]
all = ["memory", "sqlite"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
