[package]
name = "langgraph-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WASM bindings for LangGraph"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
langgraph-core = { path = "../langgraph-core" }
langgraph-checkpoint = { path = "../langgraph-checkpoint", features = ["memory"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["console"] }
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
thiserror.workspace = true
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
